--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,64 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: 'Rubik', sans-serif;
 }
 
-a {
-  color: inherit;
+h1 {
+	margin: 0;
+	font-size: 18px;
+	font-family: 'Rubik', sans-serif;
+}
+
+h2 {
+	margin: 0;
+	font-size:50px;
+	text-align: left;
+	font-family: 'Rubik', sans-serif;
+}
+
+h3 {
+	margin: 0;
+	font-size: 50px;
+}
+
+p {
+font-size: 12px;
+font-family: 'Rubik', sans-serif;
+}
+
+.button {
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
   text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+	border: 4px solid black;
+	width: 100px;
+	cursor: pointer;
 }
 
-* {
-  box-sizing: border-box;
+
+
+.header-container {
+display: flex;
+justify-content: center;
+align-items: center;
+border: solid 2px black;
+height: 500px;
+}
+
+.header{
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	width: 600px;
+	border: black solid 2px;
+}
+
+.project-image {
+	width: 350px;
+	height: 200px;
 }
