--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,64 +2,60 @@ html,
 body {
   padding: 0;
   margin: 0;
-	font-family: 'Rubik', sans-serif;
-}
-
-h1 {
-	margin: 0;
-	font-size: 18px;
-	font-family: 'Rubik', sans-serif;
-}
-
-h2 {
-	margin: 0;
-	font-size:50px;
-	text-align: left;
-	font-family: 'Rubik', sans-serif;
-}
-
-h3 {
-	margin: 0;
-	font-size: 50px;
-}
-
-p {
-font-size: 12px;
-font-family: 'Rubik', sans-serif;
-}
-
-.button {
-  border: none;
-  color: black;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-	border: 4px solid black;
-	width: 100px;
-	cursor: pointer;
-}
-
-
-
-.header-container {
-display: flex;
-justify-content: center;
-align-items: center;
-border: solid 2px black;
-height: 500px;
-}
-
-.header{
-	display: flex;
-	flex-direction: column;
-	margin: 0;
-	width: 600px;
-	border: black solid 2px;
+  font-family: 'Rubik', sans-serif;
 }
 
 .project-image {
 	width: 350px;
 	height: 200px;
 }
+
+
+/*BUTTON ANIMATION*/
+
+.svg-wrapper {
+	height: 60px;
+	margin: 0 auto;
+	position: relative;
+	transform: translateY(-50%);
+	width: 350px;
+	text-align: center;
+	cursor: pointer;
+	margin-top: 50px;
+  }
+  
+  .shape {
+	fill: transparent;
+	stroke-dasharray: 140 540;
+	stroke-dashoffset: -474;
+	stroke-width: 8px;
+	stroke: #F4C273;
+  }
+  
+  .text {
+	color: black;
+	font-family: 'Roboto Condensed';
+	font-size: 22px;
+	letter-spacing: 4px;
+	line-height: 30px;
+	position: relative;
+	top: -48px;
+  }
+  
+  @keyframes draw {
+	0% {
+	  stroke-dasharray: 140 540;
+	  stroke-dashoffset: -474;
+	  stroke-width: 8px;
+	}
+	100% {
+	  stroke-dasharray: 760;
+	  stroke-dashoffset: 0;
+	  stroke-width: 2px;
+	}
+  }
+  
+  .svg-wrapper:hover .shape {
+	-webkit-animation: 0.5s draw linear forwards;
+	animation: 0.5s draw linear forwards;
+  }
