--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 html,
 body {
   padding: 0;
@@ -5,19 +6,42 @@ body {
   font-family: 'Rubik', sans-serif;
 }
 
-a{
+a {
     text-decoration: none;
     color: black;
 }
-
-.project-image {
-	border: 2px solid black;
-	padding: 0;
-	margin: 0; 
-	cursor: pointer;
-	width: 500px;
+a.link-github{
+	width: 20px;
 }
 
+p {
+	font-family: 'Rubik', sans-serif;
+	font-size: 18px;
+}
+.social-media-desktop{
+	width: 400px;
+	text-align: right;
+}
+
+.link-github{
+	padding-right: 20px;
+}
+
+.project-container-mobile {
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+width: 100%;
+}
+
+.project-container-desktop {
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+
+}
 
 /*BUTTON ANIMATION*/
 
@@ -26,7 +50,7 @@ a{
 	margin: 0 auto;
 	position: relative;
 	transform: translateY(-50%);
-	width: 350px;
+	width: 400px;
 	text-align: center;
 	cursor: pointer;
 	margin-top: 50px;
@@ -42,7 +66,7 @@ a{
   
   .text {
 	color: black;
-	font-family: 'Roboto Condensed';
+	font-family: 'Rubik', sans-serif;
 	font-size: 22px;
 	letter-spacing: 4px;
 	line-height: 30px;
@@ -68,26 +92,42 @@ a{
 	animation: 0.5s draw linear forwards;
   }
 
-	.project-title{
-		color: blue;
-		font-family: 'Rubik', sans-serif;
-		font-size: 40px;
-	}
+	/*DESKTOOP STYLING PROJECTS*/
+.project-image {
+	padding: 0;
+	margin: 0; 
+	cursor: pointer;
+	width: 500px;
+}
+.project-title{
+	color: black;
+	font-family: 'Rubik', sans-serif;
+	font-size: 40px;
+}
 
-	.tech-attributes{
-		padding: 10px;
-		border: 2px solid black; 
-		display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    font-size: 15px;
-    font-family: 'Rubik', sans-serif;
-	}
+.project-text {
+	letter-spacing: 2px;
+  line-height: 28px;
+	font-size: 14px;
+}
 
-	.tech-attributes div{
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-    background-color: #f8f1f1;
+.tech-attributes{
+	padding: 3px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	font-family: 'Rubik', sans-serif;
+	letter-spacing: 2px;
+  line-height: 20px;
+	font-size: 12px;
+}
+
+.tech-attributes div{
+	margin: 5px;
+	padding: 10px;
+	text-align: center;
+	background-color: #F7E8C4;
+	font-family: 'Rubik', sans-serif;
+	font-weight: bold;
 }
 
 .project-container-desktop{
@@ -104,14 +144,12 @@ a{
 }
 
 
-
 .project-info-left-first-section {
  	display: flex;
 	width: 400px;
 	justify-content: space-around; 
 	align-items: center; 
 	flex-direction: column; 
-	border: 2px black solid; 
 	margin: 20px;
 	padding: 20px;
 }
@@ -129,24 +167,29 @@ a{
 	width: 400px;
 	justify-content: space-around; 
 	align-items: center; 
-	flex-direction: column; 
-	border: 2px black solid; 
+	flex-direction: column;  
 	margin: 20px;
 	padding: 20px;
 }
 
 
-
-/* Mobile device styling here */
+/* MOBILE DEVISE STYLING GOES HERE */
+.project-container-mobile{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 5px solid blue;
+}
 .project-section-mobile{
 	display: flex;  
 	flex-direction: column; 
 	justify-content: center;
 	align-items: center;
 	padding: 50px;
-	border: 2px solid red; 
 }
 
 .project-image-mobile{
-	width: 200px;
+	width: 500px;
 }
+
+
