width 100vh; for mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
-width: 100%;
+width: 100vh;
 }
 
 .project-container-desktop {
