--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
+	width: 100vh;
 }
 
 a {
