--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities; 
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
 
 html,
 body {
@@ -13,6 +11,17 @@ body {
   font-family: 'Rubik', sans-serif;
 	width: 100vh;
 }
+
+.page-container{
+	background-color: blue;
+	display: flex; 
+	justify-content:center;
+	align-items: center;
+	flex-direction:column;
+	width: 100vh;
+	margin:0 auto;
+}
+
 
 a {
     text-decoration: none;
@@ -35,6 +44,7 @@ p {
 	padding-right: 20px;
 }
 
+
 .project-container-mobile {
 display: flex;
 justify-content: center;
@@ -48,7 +58,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
-
+width: 100%;
 }
 
 /*BUTTON ANIMATION*/
