--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,17 +9,16 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
-	width: 100vh;
 }
 
-.page-container{
-	background-color: blue;
+.page-container-mobile {
 	display: flex; 
 	justify-content:center;
 	align-items: center;
-	flex-direction:column;
+	flex-direction: column;
 	width: 100vh;
-	margin:0 auto;
+	height: 100vh;
+	margin: 0;
 }
 
 
@@ -50,7 +49,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
-width: 100vh;
+width: 100%;
 }
 
 .project-container-desktop {
@@ -197,6 +196,8 @@ width: 100%;
 	justify-content: center;
 	align-items: center;
 	border: 5px solid blue;
+	width: 100%;
+
 }
 .project-section-mobile{
 	display: flex;  
@@ -207,7 +208,7 @@ width: 100%;
 }
 
 .project-image-mobile{
-	width: 500px;
+	width: 400px;
 }
 
 
