--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-@tailwind base;
-@tailwind components;
-@tailwind utilities; 
 
 
+* {
+	margin: 0; 
+}
 html,
 body {
   padding: 0;
@@ -16,8 +16,7 @@ body {
 	justify-content:center;
 	align-items: center;
 	flex-direction: column;
-	width: 100vh;
-	height: 100vh;
+	width: 100vh; 
 	margin: 0;
 }
 
@@ -196,7 +195,7 @@ width: 100%;
 	justify-content: center;
 	align-items: center;
 	border: 5px solid blue;
-	width: 100%;
+	width: 500px;
 
 }
 .project-section-mobile{
