--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,10 +93,11 @@ width: 100%;
   }
 
 	/*DESKTOOP STYLING PROJECTS*/
-.project-image {
+.project-image-desktop {
 	padding: 0;
 	margin: 0; 
 	cursor: pointer;
+	width: 500px;
 }
 .project-title{
 	color: black;
