--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
 	margin: 0; 
@@ -187,7 +190,6 @@ width: 100%;
 	justify-content:center;
 	align-items: center;
 	flex-direction: column;
-	width: 100vh; 
 	margin: 0;
 }
 
@@ -196,7 +198,6 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
-width: 100%;
 }
 
 .project-section-mobile{
