--- a/styles/globals.css
+++ b/styles/globals.css
@@ -191,6 +191,7 @@ width: 100%;
 	align-items: center;
 	flex-direction: column;
 	margin: 0;
+	width: 100vh;
 }
 
 .project-container-mobile {
@@ -198,6 +199,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 flex-direction: column;
+
 }
 
 .project-section-mobile{
