--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,10 @@ a {
     color: black;
 }
 
+.heart{
+	color: black;
+	background-color: black;
+}
 
 
 
@@ -212,6 +216,8 @@ flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
 	flex-direction: row;
+	padding-left: 10px;
+	padding-right: 5px;
 }
 
 .tech-attributes-mobile {
@@ -221,7 +227,7 @@ flex-direction: column;
 	font-family: 'Rubik', sans-serif;
 	letter-spacing: 2px;
   line-height: 20px;
-	font-size: 8px;
+	font-size: 12px;
 	width: 100%;
 }
 
@@ -247,4 +253,9 @@ i{
 
 .profile-picture{
 	width: 600px;
+}
+
+.heart{
+	width: 40px;
+	height: 40px;
 }
