--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,7 @@ display: flex;
 justify-content: center; 
 align-items: center;
 flex-direction: column;
+margin-top: 50px;
 }
 
 .project-container-desktop {
@@ -161,8 +162,12 @@ flex-direction: row;
 
 .featured-project-header-mobile{
 	text-align: center;
-	margin-top: 20px;
-	 font-size: 28px;
+	margin-top: 200px;
+	  font-size: 30px;
+  letter-spacing: 4px;
+  line-height: 50px;
+	font-family: "Rubik", sans-serif;
+	padding: 10px;
 }
 
 .page-container-mobile {
