--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,13 @@ body {
   font-family: 'Rubik', sans-serif;
 }
 
+/*Header*/
+
+@layer utilities {
+  .clip-path-slant-down-right {
+    clip-path: polygon(0 0, 100% 0, 100% 74%, 100% 100%, 100% 75%, 0 100%);
+  }
+}
 
 a {
     text-decoration: none;
