--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,9 +12,15 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
+	 min-width: 100vh;
 }
 
-/*Header*/
+ @media screen and (min-width: 1024px) {
+        html, body{
+            width:100%;;
+        }
+			}
+
 
 @layer utilities {
   .clip-path-slant-down-right {
