--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,6 +48,12 @@ transform: rotate(0deg);
 }
 }
 
+@layer utilities {
+	.photo {
+clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+}
+}
+
  h1{
 	font-size: 24px;
   letter-spacing: 4px;
