--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Rubik', sans-serif;
+	scroll-behavior: smooth;
 }
 
  /*@media screen and (min-width: 1024px) {
@@ -325,3 +326,57 @@ i{
 
 
 
+
+
+#sec-1 {
+  background-color: rgb(214, 228, 92);
+}
+#sec-2 {
+  background-color: aliceblue;
+}
+.scroll-down {
+  height: 60px;
+  width: 40px;
+  border: 2px solid black;
+  position: absolute;
+  left: 50%;
+  bottom: 20px;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.scroll-down::before,
+.scroll-down::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  transform: translate(-50%, -100%) rotate(45deg);
+  border: 2px solid black;
+  border-top: transparent;
+  border-left: transparent;
+  animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down::before {
+  top: 30%;
+  animation-delay: 0.3s;
+  /* animation: scroll-down 1s ease-in-out infinite; */
+}
+
+@keyframes scroll-down {
+  0% {
+    /* top:20%; */
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    opacity: 0;
+  }
+}
