--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ body {
         }
 			}
 */
-
+/*HEADER*/
 @layer utilities {
   .clip-path-arrow-right {
 clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
@@ -61,19 +61,25 @@ clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 }
 }
 
+
+/*ABOUT ME*/
+.header-container {
+ margin-top: 0;
+ margin-bottom: 50px;
+ text-align: center;
+}
+
  h1{
-	font-size: 24px;
+	font-size: 30px;
   letter-spacing: 4px;
   line-height: 50px;
-	font-family: "Rubik", sans-serif;
  }
 
   h2{
-	font-size: 12px;
+  font-size: 14px;
   font-family: "Rubik", sans-serif;
   letter-spacing: 4px;
   line-height: 20px;
-	padding-bottom: 10px;
  }
 
 a {
@@ -328,21 +334,17 @@ i{
 
 
 
-#sec-1 {
-  background-color: rgb(214, 228, 92);
-}
-#sec-2 {
-  background-color: aliceblue;
-}
+
+
 .scroll-down {
   height: 60px;
   width: 40px;
   border: 2px solid black;
   position: absolute;
   left: 50%;
-  bottom: 20px;
-  border-radius: 50px;
+  border-radius: 60px;
   cursor: pointer;
+	border: 2px solid black;
 }
 .scroll-down::before,
 .scroll-down::after {
@@ -359,7 +361,7 @@ i{
   animation: scroll-down 1s ease-in-out infinite;
 }
 .scroll-down::before {
-  top: 30%;
+  top: 20%;
   animation-delay: 0.3s;
   /* animation: scroll-down 1s ease-in-out infinite; */
 }
