--- a/styles/globals.css
+++ b/styles/globals.css
@@ -305,7 +305,7 @@ flex-direction: column;
 	margin: 5px;
 	padding: 10px;
 	text-align: center;
-	background-color: #F7E8C4;
+	background-color: #f8f2e1;
 	font-family: 'Rubik', sans-serif;
 	font-weight: bold;
 }
