--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,14 @@ body {
 			}
 */
 /*HEADER*/
+
+.header-background-dekstop {
+	 width: 50%;
+    height: 700px;
+    margin: 0;
+    background-image: url(../assets/header.png);
+    background-size: cover;
+}
 @layer utilities {
   .clip-path-arrow-right {
 clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
@@ -38,7 +46,8 @@ transform: rotate(0deg);
 
 @layer utilities {
   .polygon {
-clip-path: polygon(50% 0%, 100% 0, 100% 69%, 0 100%, 0 100%, 0% 60%, 0 0);
+clip-path: polygon(50% 0%, 100% 0, 100% 100%, 49% 82%, 52% 82%, 0 98%, 0 0);
+
   }
 }
 
