--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,6 +99,7 @@ clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 	text-transform: uppercase;
 	font-weight: 600;
 	text-align: center;
+	margin-top: 5px
  }
 
 a {
