--- a/styles/globals.css
+++ b/styles/globals.css
@@ -472,3 +472,13 @@ html body [data-ca3_iconfont="ETmodules"]::before {
   50%  { opacity: 1;  }
   100% { transform:translate(0,20px); opacity: 0; }
 }
+
+
+.swal-button {
+  padding: 7px 19px;
+  border-radius: 2px;
+  background-color: #CFD7C0;
+  font-size: 12px;
+  border: 1px solid #CFD7C0;
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+}
