--- a/styles/globals.css
+++ b/styles/globals.css
@@ -481,4 +481,5 @@ html body [data-ca3_iconfont="ETmodules"]::before {
   font-size: 12px;
   border: 1px solid #CFD7C0;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+	color: black;
 }
