--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
  /*@media screen and (min-width: 1024px) {
